# Chat

Battery/: CMakeLists.txt  batterycolorrect.cpp  batterycolorrect.h  batteryrect.cpp  batteryrect.h  myslider.cpp  myslider.h  slider.cpp  slider.h  widget.cpp  widget.h
Battery_qml/: CMakeLists.txt
Battery_qml/Resource/: Battery.qml  MySlider.qml  res..qrc
Battery_qml/Source/: main.cpp
Client/: CMakeLists.txt  res.qrc
Client/Resource/: Content.qml  FileTransfer.qml  Friend.qml  ToolsBar.qml  UserLogin.qml  main.qml  res..qrc  res..rcc
Client/include/: clientwork.h  window.h
Client/src/: clientwork.cpp  window.cpp
Server/: CMakeLists.txt
Server/include/: clientwork.h  tcpserver.h  window.h
Server/src/: clientwork.cpp  main.cpp  tcpserver.cpp  window.cpp
